--- a/index.css
+++ b/index.css
@@ -2,6 +2,7 @@ body {
     background-image: url("station.jpeg");
     background-size: cover;
     height: 100vh;
+    font-size: 20px;
     font-family: Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: bold;
     text-align: center;
@@ -17,7 +18,7 @@ h1 {
 }
 
 h2 {
-    font-size: 45px;
+    font-size: 65px;
     margin-top: 0;
     margin-bottom: 20px;
 }
@@ -33,14 +34,23 @@ button {
     border-radius: 9px;
 }
 
-#element {
-   background-image: url("station.jpeg");
-   background-size: cover;
-   width: 300px;
-   border: 4px solid #20333F;
-   text-shadow: 0px 0px 2px white;
+#save-el{
+    font-size: 20px;
+    color: rgb(249, 252, 251);
+    text-shadow: 0px 0px 2px rgb(0, 0, 0);
 }
 
+#element {
+   padding: 50px 0px;
+   width: 400px;
+   border: 4px solid #20333F;
+   border-radius: 10px;
+   text-shadow: 0px 0px 2px white;
+}
+#element:hover{
+    background-image: url("station.jpeg");
+    background-size: cover;
+}
 #increment-btn {
     background: #E6C786;
 }
